Manage Student to Grade
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -38,6 +38,7 @@ parameters:
         numbers: 1
         mixedCase: 1
         specials: 0
+    schemes: 'http'
     upload_path: '../web/uploads/%current_year%/%current_month%'
     timezone: UTC
     google:
