--- a/src/Busybee/Core/SystemBundle/Resources/config/menu/parameters.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/config/menu/parameters.yml
@@ -98,6 +98,7 @@ parameters:
             hidden:
                 - year_edit
                 - edit_grade
+                - student_add_to_grade
         System Admin:
             extend_update:
                 manage_bundles:
