--- a/src/Busybee/People/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/People/StudentBundle/Resources/config/services.yml
@@ -96,11 +96,20 @@ services:
     busybee_people_student.model.student_manager:
         class: Busybee\People\StudentBundle\Model\StudentManager
         arguments:
+            - '@doctrine.orm.default_entity_manager'
             - '@busybee_core_system.setting.setting_manager'
-            - '@doctrine.orm.entity_manager'
-            - '@validator'
-            - '@busybee_core_calendar.model.get_current_year'
+            - '@busybee_core_security.security.user_provider'
     busybee_management_grade.events.student_grade_subscriber:
         class: Busybee\People\StudentBundle\Events\StudentGradeSubscriber
         tags:
             - { name: doctrine.event_subscriber }
+    busybee_people_student.validator.constraints.grades_validator:
+        class: Busybee\People\StudentBundle\Validator\Constraints\GradesValidator
+        tags:
+            - { name: validator.constraint_validator, alias: student_grades_validator }
+    busybee_people_student.form.student_grade_type:
+        class: Busybee\People\StudentBundle\Form\StudentGradeType
+        arguments:
+            - '@doctrine.orm.default_entity_manager'
+        tags:
+            - { name: form.type }
