--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,7 +83,7 @@ monolog:
             max_files: '7'
         main:
             type:  rotating_file
-            path:  %kernel.logs_dir%/%kernel.environment%.log
+            path:  '%kernel.logs_dir%/%kernel.environment%.log'
             level: debug
             max_files: '7'
 
