--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -65,9 +65,8 @@ security:
                 target:   home_page
             anonymous:    true
             switch_user:  true
-
-    access_control: 
-        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: busybee_security_login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/system/install/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+    access_control:
+        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: '%schemes%' }
+        - { path: busybee_security_login, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: '%schemes%' }
+        - { path: ^/system/install/, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: '%schemes%' }
         - { path: ^/(_(profiler|wdt)|css|images|js)/, role: IS_AUTHENTICATED_ANONYMOUSLY }
