Student CalendarGroup Manage
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
       "imsky/holder": "~2.9",
       "vsn4ik/bootstrap-submenu": "~2.0",
       "twig/extensions": "~1.4",
-      "spipu/html2pdf": "^5.0"
+      "spipu/html2pdf": "^5.0",
       "league/oauth2-google": "~1.0",
       "egulias/email-validator": "~2.1",
       "egeloen/ckeditor-bundle": "^6.0"
