--- a/src/Busybee/Core/CalendarBundle/Resources/config/validation/Year.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/validation/Year.yml
@@ -9,3 +9,5 @@ Busybee\Core\CalendarBundle\Entity\Year:
             - Valid: ~
         specialDays:
             - Valid: ~
+        calendarGroups:
+            - Valid: ~
