--- a/src/Busybee/People/StudentBundle/Resources/config/doctrine/Student.orm.yml
+++ b/src/Busybee/People/StudentBundle/Resources/config/doctrine/Student.orm.yml
@@ -107,7 +107,7 @@ Busybee\People\StudentBundle\Entity\Student:
             nullable: true
             type: text
     oneToMany:
-        grades:
-            targetEntity: Busybee\People\StudentBundle\Entity\StudentGrade
+        calendarGroups:
+            targetEntity: Busybee\People\StudentBundle\Entity\StudentCalendarGroup
             mappedBy: student
             cascade: ['persist']
