--- a/src/Busybee/People/StudentBundle/Resources/config/routing.yml
+++ b/src/Busybee/People/StudentBundle/Resources/config/routing.yml
@@ -10,12 +10,12 @@ student_passport_remove:
 student_id_remove:
     path:     /student/{id}/id_remove/
     defaults: { _controller: BusybeeStudentBundle:Student:removeIDScan }
-student_add_to_grade:
-    path:     /grade/{id}/manage/
-    defaults: { _controller: BusybeeStudentBundle:Student:addToGrade }
-remove_student_from_grade:
-    path:     /grade/{grade}/{student}/remove/
-    defaults: { _controller: BusybeeStudentBundle:Student:removeStudentFromGrade }
-add_student_to_grade:
-    path:     /grade/{grade}/{student}/{status}/add/
-    defaults: { _controller: BusybeeStudentBundle:Student:addStudentToGrade }
+student_add_to_calendar_group:
+    path:     /calendar/group/{id}/manage/
+    defaults: { _controller: BusybeeStudentBundle:Student:addToCalendarGroup }
+remove_student_from_calendar_group:
+    path:     /calendar/group/{group}/{student}/remove/
+    defaults: { _controller: BusybeeStudentBundle:Student:removeStudentFromCalendarGroup }
+add_student_to_calendar_group:
+    path:     /calendar/group/{group}/{student}/{status}/add/
+    defaults: { _controller: BusybeeStudentBundle:Student:addStudentToCalendarGroup }
