--- a/src/GibbonBundle/Resources/config/services.yml
+++ b/src/GibbonBundle/Resources/config/services.yml
@@ -23,3 +23,9 @@ services:
             - '@doctrine.orm.gibbon_entity_manager'
             - '@doctrine.orm.default_entity_manager'
             - '@busybee_people_person.model.person_manager'
+    gibbon.model.import_year:
+        class: GibbonBundle\Model\ImportYear
+        arguments:
+            - '@doctrine.orm.gibbon_entity_manager'
+            - '@doctrine.orm.default_entity_manager'
+            - '@busybee_people_person.model.person_manager'
