Student CalendarGroup Manage Mk II
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/CalendarBundle/Resources/config/validation/CalendarGroup.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/validation/CalendarGroup.yml
@@ -9,7 +9,7 @@ Busybee\Core\CalendarBundle\Entity\CalendarGroup:
             fields:
                 - sequence
                 - year
-            message: calendargroup.sequence.unique
+            message: calendar.group.sequence.unique
             errorPath: nameShort
     properties:
         website:
